# mitotic-spindle-tool

./: .gitignore  .platforms  BUILD.md  DEPLOYMENT_STATUS.md  LICENSE  README.md  WORKFLOWS.md  build-linux.sh  build-windows.bat  build.py  generate_build_metadata.py  local_test_report.md  mitotic-spindle-tool.spec  pyproject.toml  requirements.txt  setup.py  spindleGUI.py  test-workflow.py  test_icons.py  test_metadata.py  test_timing_extraction.py  update_version.py
.github/: WORKFLOWS.md
.github/workflows/: auto-release-on-version-bump.yml  auto-release.yml  auto-version-bump.yml  build-and-test.yml  manual-release.yml  pr-build.yml  release.yml  semantic-version-bump.yml  smart-release.yml  version.yml
.github/workflows/build-scripts/: act-build.sh  build.py  create_dmg.py  generate_build_metadata.py  mitotic-spindle-tool.spec  runtime_hook_src_modules.py  update_version.py
src/: curveFitData.py  curveFitData_backup.py  keypress_method.py  main.py  manualSpindleDialog.py  metadataDialog.py  plotDialog.py  plotSpindle.py  spindleGUI.py  spindlePreviewDialog.py  spindleTool.py  threshFunctions.py  tiffFunctions.py  version.py
